updated package.js
