# api/swagger/swagger.yaml
@@ -168,7 +168,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
 
     post:
-      description: To register an new account, user needs to enter first_name, last_name, username, and the password. The response object would includes an token for authentication purpose
+      description: To register an new account, user needs to enter first_name, last_name, username, password and a unique token. The response object would includes an token for authentication purpose
       operationId: AddUser
       produces:
         - application/json
@@ -216,7 +216,7 @@ paths:
 
     patch:
       # define the parameters
-      description: updating an new user
+      description: update a sepecific user with inputs of first_name, last_name, username, and password, the return response will include id, username, first_name, and last_name
       operationId: UpdateUser
       produces:
         - application/json
@@ -242,7 +242,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     delete:
-      description: deleting a specific folder
+      description: deleting a specific user, it will return back a id, username, first_name, and last_name
       operationId: DeleteUser
       produces:
         - application/json
@@ -266,7 +266,7 @@ paths:
   /users/{id}/packages:
     x-swagger-router-controller: packages
     get:
-      description: getting all the packages from the user
+      description: Get a full package information of the specific user, the response object will have the following - package_id, user_id, airline, flight_id, flight_cost, restaurant_name, restaurant_id, restaurants_review, hotels_name, hotels_id, and hotels_cost
       operationId: GetAllPackagePerUser
       produces:
         - application/json
@@ -289,7 +289,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
 
     post:
-      description: adding new a package for the user
+      description: To add a package for the specific user, user needs to enter budget, departure_airport_name, destination_airport_name, destination_airport_name, departure_date
       operationId: PostUniquePackagePerUser
       produces:
         - application/json
@@ -536,21 +536,30 @@ definitions:
   AddNewPackage:
     type: object
     required:
-      - budget
-      - user_id
+      - airfare
       - departure_airport_name
       - destination_airport_name
       - departure_date
+      - hotel_name
+      - city_name
     properties:
-      budget:
-        type: integer
-      user_id:
+      airfare:
+        description: enter the amount of allowed airfare, please enter an amount larger than your airfare; otherwise, it won't work. For instance, you can enter a big amount such 2000 dollars
         type: integer
       departure_airport_name:
+        description: enter the airport name such as "SFO" or "JFK"
         type: string
       destination_airport_name:
+        description: enter the airport name such as "SFO" or "JFK"
         type: string
       departure_date:
+        description: enter the date in 'yyyy-mm-dd' format
+        type: string
+      hotel_name:
+        description: enter the hotel name such as 'Hilton'
+        type: string
+      city_name:
+        description: enter the city name such as 'San Francisco'
         type: string
 
   PackageDetail:
